--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,7 @@ body {
 .search-input {
     max-width: 420px;
 }
+/* Searchbar styling */
 
 /*Hero Section*/
 #hero h1 {
@@ -20,6 +21,18 @@ body {
     font-family: "Radley", serif;
 }
 
+#location-form .search-input {
+    border-radius: 0px;
+    background-color: rgb(255, 255, 255);
+    border: black 2px solid;
+}
+
+#location-form .btn {
+    border-radius: 0px;
+    background-color: #f6ffa5;
+    color: #000000;
+    border: black 2px solid;
+}
 /*moving bootstrap default card-body style into custonm class for weather cards and js interactivity*/
 .weather-card {
     flex: 1 1 auto;
