--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,5 @@
 /* google fonts */
-@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&family=Radley:ital@0;1&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Boldonse&display=swap");
 body {
     min-height: 100vh;
     background: linear-gradient(135deg, #87ceeb 0%, #ffe29f 50%, #ffa99f 100%);
@@ -12,7 +11,7 @@ body {
 }
 /* Searchbar styling */
 
-#location-form .search-input{
+#location-form .search-input {
     border-radius: 0px;
     background-color: rgb(255, 255, 255);
     border: black 2px solid;
@@ -23,8 +22,8 @@ body {
     color: #fdd90d;
     text-align: center;
     padding-top: 20%;
-    font-size: 4rem;
-    font-family: "Radley", serif;
+    font-size: 3rem;
+    font-family: "boldonse", sans-serif;
 }
 
 #location-form .search-input {
