--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,6 +85,12 @@ body {
     text-align: center;
 }
 
+.day {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 0px;
+    color: rgb(90, 90, 90);
+}
 /* Secondary text color on cards */
 .text-muted {
     color: rgb(226, 107, 39) !important;
