html validation error fixes: favourites button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -111,6 +111,7 @@ footer p {
     color: #000000;
     border: black 2px solid;
     height: 39.2px;
+    width: 100%;
 }
 /*Card styling*/
 .weather-card {
